# trio-lab

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: DEPLOY.md  PROJECT.md  ROADMAP.md
migrations/: 001_init.sql  002_collector_journal.sql  003_aggregates.sql  004_scores.sql  005_participant_cc.sql  006_counters.sql  007_trio_stat_columns.sql  008_duo_stats_gold_buckets.sql  009_cc_stat.sql  010_cc_theoretical_and_blend.sql  011_cc_reliability.sql  012_drop_cc_reliability_table.sql  013_drop_atakhan.sql  014_allies.sql  015_scaling.sql  016_vision_per_minute.sql  017_drakes_cc_per_minute.sql  018_confidence_intervals.sql  019_autovacuum_tuning.sql  020_cc_per_champion.sql  021_dmg_per_gold_wards_jungle_cs.sql  022_drop_counters_and_allies.sql  023_match_role_stats.sql  024_widen_duo_roles.sql  025_role_stats_combat.sql  026_role_matchups.sql  027_win_factors.sql  028_gold_factors.sql  029_widen_duo_duration_roles.sql  030_pre15_objectives.sql  031_champion_resilience.sql  032_team_gold15.sql
src/trio_lab/: config.py  db.py  maintenance.py
src/trio_lab/ccref/: __main__.py  build.py  champions.py  parse.py  reliability.py  score.py  sync_reliability.py  sync_theoretical.py  validate.py  wiki.py
src/trio_lab/collector/: __main__.py  client.py  collect.py  inclusion.py  ladder.py  parsing.py  patches.py  service.py  storage.py
src/trio_lab/stats/: aggregate.py  backfill.py  backfill_participant_cc.py  extract.py
src/trio_lab/synergy/: __main__.py  _linalg.py  allies.py  compute.py  counters.py  gold_factors.py  matchups.py  resilience.py  scores.py  win_factors.py  windows.py
src/trio_lab/web/: __init__.py  __main__.py  app.py  champions.py  queries.py  summary.py
src/trio_lab/web/static/: admin.js  sort.js  style.css  thresholds.js
src/trio_lab/web/templates/: _legend.html  _threshold_filters.html  admin.html  base.html  champion.html  draft.html  duo.html  duos.html  flex.html  insights.html  resilience.html  tierlist.html  trio.html
tests/: conftest.py  test_maintenance_pg.py
tests/ccref/: test_build.py  test_parse.py  test_reliability_pg.py  test_score.py  test_sync_reliability_pg.py  test_sync_theoretical_pg.py
tests/ccref/fixtures/: cc_sources.wikitext  data_charm.wikitext  data_rocket_grab.wikitext  data_whimsy.wikitext
tests/collector/: _builders.py  test_archive.py  test_client.py  test_collect.py  test_inclusion.py  test_ladder.py  test_parsing.py  test_patches.py  test_service.py  test_storage_pg.py
tests/fixtures/riot/: timeline_min.json
tests/stats/: _builders.py  test_aggregate_pg.py  test_backfill_participant_cc_pg.py  test_backfill_pg.py  test_extract.py  test_extract_real.py
tests/synergy/: test_allies_pg.py  test_compute.py  test_compute_pg.py  test_counters_pg.py  test_gold_factors_pg.py  test_linalg.py  test_matchups_pg.py  test_resilience.py  test_resilience_pg.py  test_scores.py  test_win_factors.py  test_win_factors_pg.py  test_windows.py
tests/web/: test_app_pg.py  test_summary.py
