[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trio-lab"
version = "0.0.1"
description = "Winrates et scores de synergie par trio de champions jungle/mid/support (LoL)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Celian" }]

# Dépendances runtime ajoutées phase par phase (jamais d'avance).
dependencies = [
    "python-dotenv>=1.0",
    # Phase 1 — collector : client Riot (throttling/back-off natifs) + Postgres.
    "pulsefire>=2.0",
    "psycopg[binary]>=3.1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "pytest>=8.0",
    "pytest-mock>=3.14",
    "pytest-asyncio>=0.23",
    "aioresponses>=0.7",
    # Cap temporaire hérité de macro-lab : aioresponses 0.7.8 ne supporte pas
    # encore aiohttp 3.14 (arg `stream_writer` requis sur ClientResponse).
    "aiohttp<3.14",
]

[tool.hatch.build.targets.wheel]
packages = ["src/trio_lab"]

# --- Ruff : formatter + linter (mêmes règles que macro-lab) ---
[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"

# --- Pytest ---
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
asyncio_mode = "auto"
